Fix inspection warnings
Possible exception during static initialization of current project version.
Correct types of values in clang tidy.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(golmcli golmcli.cpp)
 
-target_link_libraries(golmcli LINK_PUBLIC golm_lib)
+target_link_libraries(golmcli LINK_PUBLIC golm_core)
