--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,1 @@
-add_library(golm_lib golm_lib.cpp)
-
-target_include_directories(golm_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_subdirectory(core)
